--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Prashun Chakraborty - Portfolio Website</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="description" content="Prashun Chakraborty DevOps Engineer Portfolio" />
+	<meta name="keywords" content="Prashun Chakraborty,DevOps Engineer Portfolio,Resume" />
+	<meta name="author" content="fPrzshun Chakraborty" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -68,14 +68,12 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Louie Jie Mahusay</span></h1>
-							<h3><span>Web Developer / Photographer</span></h3>
+							<h1><span>Prashun Chakraborty</span></h1>
+							<h2><span>DevOps Engineer</span></h2>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/prashun-chakraborty-774204189/" target="_blank" rel="noopener noreferrer"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://github.com/Prashun08" target="_blank" rel="noopener noreferrer"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -95,23 +93,19 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Prashun Chakraborty</span></li>
+						<!--<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>-->
+						<li><span class="first-block">Email:</span><span class="second-block">prashun.ch@gmail.com</span></li>
+						<!--<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>-->
+						<li><span class="first-block">Location:</span><span class="second-block">New Delhi</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>Detail-orientated Infrastructure Engineer adaptive to automation, critical decisions making, managing deadlines, and effective service delivery with expertise in continuous integration, and quantitative problem-solving skills dedicated towards company growth and improvements.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/prashun-chakraborty-774204189/" target="_blank" rel="noopener noreferrer"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://github.com/Prashun08" target="_blank" rel="noopener noreferrer"><i class="icon-github2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -123,7 +117,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Resume</h2>
+					<h2>Resume</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -136,11 +130,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Infrastructure Engineer</h3>
+									<span class="company">DXC Technology - 2021 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Managed server migration project for Deutsche Bank, upgrading vSphere Cluster from v6.5 to v7.0, troubleshooting critical issues, and ensuring effective delivery. Utilized Python, Bash scripting, and Jenkins to automate tasks and implement CI/CD principles. Orchestrated cloud infrastructure on AWS and GCP using IaaC, administered Linux, Wintel, and PostgreSQL servers with Ansible and Terraform, and optimized applications with Docker and Kubernetes. Configured Linux storage and network components for optimal performance and collaborated on high-availability solutions for mission-critical applications, producing various documentation and reports.</p>
 								</div>
 							</div>
 						</li>
@@ -148,11 +142,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Intern</h3>
+									<span class="company">Damsu Marketing & Consultants Pvt. Ltd. - 06/20 - 08/20</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Developed a recommendation system project leveraging machine learning techniques. Conducted analysis to fortify analytics, bolster strategic planning, and facilitate informed decision-making with robust data insights. Collaborated with team members and leaders to gather requirements and data, ensuring alignment with project objectives and customer needs. Implemented software updates to enhance features, address security vulnerabilities, and resolve defects, contributing to project success.</p>
 								</div>
 							</div>
 						</li>
@@ -160,11 +154,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
+									<h3 class="timeline-title">Intern</h3>
+									<span class="company">Defense Research Development Organization (DRDO) - 06/19 - 08/19</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Completed a project focused on diode data analysis, emphasizing scalability and repeatability in reporting solutions through stakeholder collaboration. Enhanced reporting skills to effectively communicate findings to diverse audiences, utilizing Tableau for standardized analysis metrics and dashboards. Addressed data quality issues and performed troubleshooting using Python, ensuring accurate and reliable data analysis.</p>
 								</div>
 							</div>
 						</li>
@@ -177,11 +171,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Bachelor's Degree</h3>
+									<span class="company">Guru Gobind Singh Indraprastha University - 2017 - 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Graduated with First Division (78.2%)</p>
 								</div>
 							</div>
 						</li>
@@ -189,35 +183,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<h3 class="timeline-title">High School</h3>
+									<span class="company">Mount Carmel School - 2015 - 2017</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Graduated with 92.4 percentage</p>
 								</div>
 							</div>
 						</li>
@@ -228,7 +198,7 @@
 	</div>
 	
 
-	<div id="fh5co-features" class="animate-box">
+	<!--<div id="fh5co-features" class="animate-box">
 		<div class="container">
 			<div class="services-padding">
 				<div class="row">
@@ -316,7 +286,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 
 	<div id="fh5co-skills" class="animate-box">
 		<div class="container">
@@ -614,9 +584,6 @@
 			</form>	
 		</div>
 	</div>
-
-	<div id="map" class="fh5co-map"></div>
-	</div>
 	
 	<div id="fh5co-footer">
 		<div class="container">
@@ -645,8 +612,7 @@
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
+	
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
