--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<p>Detail-orientated Infrastructure Engineer adaptive to automation, critical decisions making, managing deadlines, and effective service delivery with expertise in continuous integration, and quantitative problem-solving skills dedicated towards company growth and improvements.</p>
+					<p>Detail-orientated Software Engineer with 3+ years of experience in devops, cloud computing and infrastructure engineering adaptive to automation, critical decisions making, managing deadlines, and effective service delivery with expertise in continuous integration, and quantitative problem-solving skills dedicated towards company growth and improvements.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.linkedin.com/in/prashun-chakraborty-774204189/" target="_blank" rel="noopener noreferrer"><i class="icon-linkedin2"></i></a></li>
@@ -273,81 +273,49 @@
 		</div>
 	</div>
 
-	<!--<div id="fh5co-work" class="fh5co-bg-dark">
+	<div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Work</h2>
+					<h2>Personal Projects</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="https://github.com/Prashun08/AWS_Ansible_Project" target="_blank" rel="noopener noreferrer" class="work" style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Automation using Ansible</h3>
+							<span>Created an ansible playbook to create a key pair and launch ec2 instance on AWS.</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="https://www.linkedin.com/posts/prashun-chakraborty-774204189_devops-terraform-aws-activity-7175924669970018304-OZbT?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer" class="work" style="background-image: url(images/portfolio-2.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>IaaC using Terraform</h3>
+							<span>Deployed EC2 along with Load Balancer on AWS using Terraform.</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="https://www.linkedin.com/posts/prashun-chakraborty-774204189_devops-ci-jenkins-activity-7199688722248863744-u3FB?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>CI/CD using Jenkins</h3>
+							<span>Made a two-tier flask and mongodb application and deployed it on AWS through docker containers. Also, integrated the code with synk for checking code vulnerabilities and pytest for unit testing.</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Design</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Website</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>GitLab Project</h3>
+							<span>Work In Progress</span>
 						</div>
 					</a>
 				</div>
 			</div>
 		</div>
-	</div>-->
+	</div>
 
 	<!--<div id="fh5co-blog">
 		<div class="container">
