Added GitLab Project

--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="https://gitlab.com/Prashun08/GitOps_CI_CD_AWS_EKS_Project" target="_blank" rel="noopener noreferrer" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
 							<h3>GitLab Project</h3>
-							<span>Work In Progress</span>
+							<span>CI/CD of Python REST API on AWS EKS(Kubernetes) using GitOps.</span>
 						</div>
 					</a>
 				</div>
