Updated with new workex

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 							<h1><span>Prashun Chakraborty</span></h1>
-							<h2><span>DevOps Engineer</span></h2>
+							<h2><span>DevSecOps Engineer</span></h2>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.linkedin.com/in/prashun-chakraborty-774204189/" target="_blank" rel="noopener noreferrer"><i class="icon-linkedin2"></i></a></li>
@@ -101,7 +101,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<p>Detail-orientated Infrastructure Engineer adaptive to automation, critical decisions making, managing deadlines, and effective service delivery with expertise in continuous integration, and quantitative problem-solving skills dedicated towards company growth and improvements.</p>
+					<p>Detail-orientated DevSecOps Engineer adaptive to automation, critical decisions making, managing deadlines, and effective service delivery with expertise in continuous integration, and quantitative problem-solving skills dedicated towards company growth and improvements.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://www.linkedin.com/in/prashun-chakraborty-774204189/" target="_blank" rel="noopener noreferrer"><i class="icon-linkedin2"></i></a></li>
@@ -130,15 +130,27 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
+									<h3 class="timeline-title">Cloud Infrastructure Engineer (DevSecOps)</h3>
+									<span class="company">SITA - 11/2024 - Current</span>
+								</div>
+								<div class="timeline-body">
+									<p>At SITA, I play a key role in implementing and managing CI/CD pipelines using Azure DevOps, enabling seamless and automated deployments across development and production environments. I was responsible for configuring and maintaining build and release pipelines, integrating quality gates, and ensuring secure code delivery aligned with DevSecOps practices. My work involved collaboration with development teams to streamline workflows, reduce manual intervention, and accelerate delivery cycles. I also contributed to infrastructure automation using YAML pipelines, managed service connections securely, and ensured compliance with cloud governance policies on Microsoft Azure and SITA Private Cloud.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
 									<h3 class="timeline-title">Infrastructure Engineer</h3>
-									<span class="company">DXC Technology - 2021 - Current</span>
+									<span class="company">DXC Technology - 07/2021 - 11/2024</span>
 								</div>
 								<div class="timeline-body">
 									<p>Managed server migration project for Deutsche Bank, upgrading vSphere Cluster from v6.5 to v7.0, troubleshooting critical issues, and ensuring effective delivery. Utilized Python, Bash scripting, and Jenkins to automate tasks and implement CI/CD principles. Orchestrated cloud infrastructure on AWS and GCP using IaaC, administered Linux, Wintel, and PostgreSQL servers with Ansible and Terraform, and optimized applications with Docker and Kubernetes. Configured Linux storage and network components for optimal performance and collaborated on high-availability solutions for mission-critical applications, producing various documentation and reports.</p>
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -150,7 +162,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -167,7 +179,7 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -179,7 +191,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -250,12 +262,20 @@
 						  </div>
 						</div>
 					</div>
+					<div class="progress-wrap">
+						<h3><span class="name-left">Cloud Security</span><span class="value-right">80%</span></h3>
+						<div class="progress">
+						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
+						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+						  </div>
+						</div>
+					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="progress-wrap">
 						<h3><span class="name-left">AWS Cloud Platform</span><span class="value-right">90%</span></h3>
 						<div class="progress">
-						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
+						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
 						  </div>
 						</div>
@@ -263,8 +283,16 @@
 					<div class="progress-wrap">
 						<h3><span class="name-left">Google Cloud Platform</span><span class="value-right">85%</span></h3>
 						<div class="progress">
-						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
+						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+						  </div>
+						</div>
+					</div>
+					<div class="progress-wrap">
+						<h3><span class="name-left">Microsoft Azure</span><span class="value-right">75%</span></h3>
+						<div class="progress">
+						  <div class="progress-bar progress-bar-6 progress-bar-striped active" role="progressbar"
+						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
 						  </div>
 						</div>
 					</div>
